[package]
name = "mos6502"
version = "0.1.0"
authors = ["Simon A. Berger <simberger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
rand = "0.8.5"
simple-logging = "2.0.2"
termion = "3.0.0"
# env_logger = "*"
